    available, to avoid panels stacking one over another.
* Fixed bug with hidden panel disappearing after resolution change.
* Add lxpanel_image_new_for_icon() API to replace another (obsolete) API
    _gtk_image_new_from_file_scaled().
* Added API panel_config_hotkey_button_new() to use as CONF_TYPE_EXTERNAL
    widget to allow configure global hotkeys for plugins functions.
* Added API panel_config_click_button_new() to configure mouse gestures.
* Added "icon-size-changed" signal to LXPanel which is emitted when icons
    size in configuration dialog was changed.
* Improved lxpanel_image_new_for_icon() API to follow panel icons size
    changes, not only theme changes. This way calls on lxpanel_image_*
    APIs on theme or panel changes may be eliminated, i.e. code becomes
    simpler.
* Added new lxpanel_image_change_icon() API for simplification reasons so
    other lxpanel_image_* APIs can be replaced completely.
* APIs lxpanel_button_set_icon() lxpanel_button_update_icon() now don't
    require setting icon size since created button already follows size
    from panel settings. Also it doesn't require refresh after the panel
    configuration change.
* Correctly open 'netstat' plugin own menu on leftclick since rightclick
    should open panel context menu instead.
* System critical temperature level in 'thermal' plugin now is properly
    ignored if manual levels are active.
* Fixed click on 'menu' plugin, only image was clickable, not whole area.

0.7.2
-------------------------------------------------------------------------
* Fixed unhiding panel if it becomes empty and height_when_hidden is 0.
* Fixed invalid X protocol word size: despite of stating it 32 bit, the X
    server uses unsigned long which is 64 bit on 64-bit architectures.
* Adapted to use libmenu-cache >= 1.0.0 - it could show empty folders in
    the desktop menu.
* Fixed crash in taskbar after visible task changed name then gone.